<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_favor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_green_50"
    tools:context="view.tabs.addFavor.FavorRequestView">

    <!-- add above: android:background="@color/material_green_50"-->
...
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="20dp">


        <Button
            android:id="@+id/request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favor_confirm_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/title_request_view"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:autofillHints=""
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/request_button" />


        <EditText
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="top|start"
            android:hint="@string/favor_details_hint"
            android:inputType="textMultiLine"
...
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:drawableEnd="@drawable/ic_image_24dp"
                android:text="Upload" />

            <Button
                android:id="@+id/add_camera_picture_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_photo_camera_24dp"
                android:text="Take" />

            <Button
...
                android:text=""/>

        </LinearLayout>


        <ImageView
            android:id="@+id/image_view_request_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/favor_img_content_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
...
