...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:ems="10"
                            android:focusable="true"
                            android:padding="10dp"
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_info_green_24dp"
                            android:drawablePadding="10dp"
                            android:gravity="center"
                            android:textIsSelectable="true"
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/committed_helpers"
                            android:textSize="16sp" />

                        <ListView
                            android:id="@+id/commit_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:autofillHints="commit users shown here"
                            app:layout_constraintBottom_toBottomOf="parent"
...
                android:background="@color/material_green_500"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <Button
                    android:id="@+id/chat_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/commit_complete_button"
                    android:layout_alignBottom="@id/commit_complete_button"
                    android:layout_gravity="end"
                    android:layout_toStartOf="@+id/commit_complete_button"
                    android:backgroundTint="#ffff"
                    android:drawableStart="@drawable/ic_chat_24dp"
                    android:text="Chat" />
...
